# xmldiff

./: .coveragerc  .coveralls.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGES.rst  CHANGES.txt  ChangeLog  DEPENDS  LICENSE.txt  MANIFEST.in  Makefile  README  README.rst  README.txt  README.xmlrev  TODO  TODO.rst  TODO.txt  __init__.py  __pkginfo__.py  announce.txt  announce_fr.txt  apycot.ini  ezs.py  fmes.py  format.py  input.py  main.py  misc.py  model_1_2.diff  model_indep_1.archimate  model_indep_2.archimate  mydifflib.py  objects.py  parser.py  pyproject.toml  setup.cfg  setup.py  (+1 more)
.github/workflows/: lint.yml  test.yml
debian/: changelog  control  copyright  python2.3-xmldiff.dirs  python2.3-xmldiff.postinst  python2.3-xmldiff.prerm  rules  watch  xmldiff-test.dirs  xmldiff-xmlrev.dirs  xmldiff-xmlrev.install  xmldiff-xmlrev.manpages  xmldiff.dirs  xmldiff.docs  xmldiff.manpages  xmldiff.postinst  xmldiff.prerm
doc/: API.txt  HELP.txt  makefile
docs/: Makefile  make.bat  requirements.txt
docs/source/: advanced.rst  api.rst  commandline.rst  conf.py  contributing.rst  index.rst  installation.rst
docs/source/static/: htmlformatter.xslt
extensions/: Setup  maplookup.c
man/: xmldiff.1  xmlrev.1
src/xmldiff/: __init__.py  difflib.py  fmes.py  format.py  helpers.py  input.py  main.py  misc.py  mydifflib.py  objects.py  parser.py
src/xmldiff/tests/: test_difflib.py  test_options.py  test_parser.py  test_regrtest.py
src/xmldiff/tests/data/: test00_result  test02_--xupdate_result  test02_2.xml  test03_--xupdate_result  test03_1.xml  test03_result  test05_--xupdate_result  test06_1.xml  test06_result  test07_--xupdate_result  test07_2.xml  test08_--xupdate_result
test/: README  regrtest.py  unittest_options.py  unittest_parser.py
test/data/: test00_--xupdate_result  test00_1.xml  test00_2.xml  test01_--xupdate_result  test01_1.xml  test01_result  test04_--xupdate_result  test04_1.xml  test04_2.xml  test04_result  test05_1.xml  test05_2.xml  test05_result  test06_--xupdate_result  test08_result
tests/: README  __init__.py  conftest.py  test_diff.py  test_difflib.py  test_formatting.py  test_main.py  test_parser.py  test_patch.py  test_performance.py  test_regrtest.py  test_utils.py  testing.py
tests/data/: test02_result  test03_2.xml  test06_2.xml  test07_1.xml  test07_result  test08_1.xml  test08_2.xml  test08_result  test09_ns_1.xml  test09_ns_2.xml  test09_ns_result  test10_ns_1.xml  test10_ns_2.xml  test10_ns_result  test11_ns_2.xml  test11_ns_result
tests/data/broken/: broken.xml
tests/data/dir2/: changing.xml
tests/data/parse/: default_ns.xml  iso.xml  simple_ns.xml  utf16.xml  utf8.xml
tests/test_data/: all_actions.expected.xml  all_actions.left.xml  all_actions.right.xml  bom_1.xml  bom_2.xml  complex-text-update.expected.html  complex-text-update.expected.rml  complex-text-update.left.html  complex-text-update.left.rml  complex-text-update.right.html  complex-text-update.right.rml  example.expected.html  example.left.html  example.right.html  insert-node.diff  insert-node.expected.html  insert-node.expected.rml  insert-node.left.html  insert-node.right.html  insert-node.right.rml  namespace.expected.xml  namespace.left.xml  namespace.right.xml  no-text-substitutions.expected.rml  no-text-substitutions.left.rml  no-text-substitutions.right.rml  rmldoc.expected.rml  rmldoc.expected.xml  rmldoc.left.xml  rmldoc.right.rml  rmldoc.right.xml  sbt_template.expected.xml  sbt_template.left.xml  sbt_template.right.xml
xmldiff/: _diff_match_patch_py2.py  _diff_match_patch_py3.py  actions.py  diff.py  diff_match_patch.py  formatting.py  main.py  patch.py  utils.py
xsl/: docbook_rev.xsl  xmlrev.xslt
