[metadata]
name = xmldiff
version = 2.7.1.dev0
description = Creates diffs of XML files
long_description = file: README.rst, CHANGES.rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Topic :: Text Processing :: Markup :: XML
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: PyPy
keywords = xml, html, diff
author = Lennart Regebro
author_email = lregebro@shoobx.com
url = https://github.com/Shoobx/xmldiff
license = MIT
project_urls =
    Source Code = https://github.com/Shoobx/xmldiff

[options]
python_requires = >=3.8
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    = .
setup_requires =
    setuptools
install_requires =
    lxml>=3.1.0

[options.packages.find]
where = .
exclude =
   doc
   tests

[options.extras_require]
devenv =
    black
    coverage
    flake8
    zest.releaser[recommended]

[options.entry_points]
console_scripts =
    xmldiff = xmldiff.main:diff_command
    xmlpatch = xmldiff.main:patch_command

[flake8]
max-line-length=120
exclude =
    xmldiff/*diff_match_patch*.py

[tool:pytest]
testpaths =
    tests

[check-manifest]
ignore =
  .pre-commit-config.yaml

[zest.releaser]
create-wheel = yes
